--- a/mandelbulber2/qt/tab_fractal.ui
+++ b/mandelbulber2/qt/tab_fractal.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>418</width>
     <height>1015</height>
    </rect>
   </property>
@@ -29,27 +29,6 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="cButtonLoadSettingsFromWidget" name="pushButton_local_load_2">
-       <property name="text">
-        <string>Load</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="cButtonSaveSettingsFromWidget" name="pushButton_local_save_2">
-       <property name="text">
-        <string>Save</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="cButtonResetSettingsFromWidget" name="pushButton_local_reset_2">
-       <property name="text">
-        <string>Reset</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="cButtonRandomSettingsFromWidget" name="pushButton_local_randomize_2">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
@@ -59,6 +38,40 @@
        </property>
        <property name="text">
         <string>Randomize</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="cButtonLoadSettingsFromWidget" name="pushButton_local_load">
+       <property name="text">
+        <string>Load</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="cButtonSaveSettingsFromWidget" name="pushButton_local_save">
+       <property name="text">
+        <string>Save</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="cButtonResetSettingsFromWidget" name="pushButton_local_reset">
+       <property name="text">
+        <string>Reset</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_local_navi">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Navi</string>
        </property>
       </widget>
      </item>
