--- a/mandelbulber2/formula/ui/abox_smooth.ui
+++ b/mandelbulber2/formula/ui/abox_smooth.ui
@@ -672,7 +672,7 @@ offset:</string>
         <item row="0" column="3">
          <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_B">
           <property name="enabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -3098,14 +3098,14 @@ multiplier:</string>
    <header>my_double_spin_box.h</header>
   </customwidget>
   <customwidget>
-   <class>MySpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>my_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MySpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>my_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
