--- a/mandelbulber2/formula/ui/transf_difs_torus_twist.ui
+++ b/mandelbulber2/formula/ui/transf_difs_torus_twist.ui
@@ -616,54 +616,19 @@
           <number>2</number>
          </property>
          <item>
-          <layout class="QGridLayout" name="gridLayout_51" columnstretch="0,1">
+          <layout class="QGridLayout" name="gridLayout_54" columnstretch="0,1">
            <property name="spacing">
             <number>2</number>
            </property>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_25">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_30">
              <property name="text">
-              <string>offset0:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_26">
-             <property name="text">
-              <string>width:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleA_2">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-99.998999999999995</double>
-             </property>
-             <property name="maximum">
-              <double>99.998999999999995</double>
-             </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
+              <string>pitch:</string>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0">
+            <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleC_0">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                <horstretch>0</horstretch>
@@ -690,8 +655,8 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleG_1">
+           <item row="0" column="1">
+            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_02">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                <horstretch>0</horstretch>
@@ -718,45 +683,10 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetC_0">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-99.998999999999995</double>
-             </property>
-             <property name="maximum">
-              <double>99.998999999999995</double>
-             </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_28">
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_26">
              <property name="text">
-              <string>TEMPC0:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_30">
-             <property name="text">
-              <string>spiral:</string>
+              <string>taper:</string>
              </property>
             </widget>
            </item>
@@ -930,41 +860,6 @@
            <property name="spacing">
             <number>2</number>
            </property>
-           <item row="1" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_2">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-99.998999999999995</double>
-             </property>
-             <property name="maximum">
-              <double>99.998999999999995</double>
-             </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_29">
-             <property name="text">
-              <string>xq:</string>
-             </property>
-            </widget>
-           </item>
            <item row="0" column="1">
             <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetD_0">
              <property name="sizePolicy">
@@ -1000,10 +895,45 @@
              </property>
             </widget>
            </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_29">
+             <property name="text">
+              <string>size:</string>
+             </property>
+            </widget>
+           </item>
            <item row="2" column="0">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledI_false">
              <property name="text">
               <string>box clip</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_2">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="prefix">
+              <string/>
+             </property>
+             <property name="suffix">
+              <string/>
+             </property>
+             <property name="decimals">
+              <number>6</number>
+             </property>
+             <property name="minimum">
+              <double>-99.998999999999995</double>
+             </property>
+             <property name="maximum">
+              <double>99.998999999999995</double>
+             </property>
+             <property name="singleStep">
+              <double>0.100000000000000</double>
              </property>
             </widget>
            </item>
